--- a/src/Views/SelfUpdate.axaml
+++ b/src/Views/SelfUpdate.axaml
@@ -74,7 +74,7 @@
                         HorizontalContentAlignment="Center"
                         VerticalContentAlignment="Center">
                   <StackPanel Orientation="Horizontal">
-                    <Path Width="12" Height="12" Data="{StaticResource Icons.Pull}"/>
+                    <Path Width="12" Height="12" Data="{StaticResource Icons.Pull}" Fill="White"/>
                     <TextBlock Text="{DynamicResource Text.SelfUpdate.GotoDownload}" Margin="8,0,0,0"/>
                   </StackPanel>
                 </Button>
