--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -138,16 +138,11 @@
                                                VerticalAlignment="Center"/>
 
                       <v:CommitRefsPresenter Grid.Column="1"
-                                             IconBackground="{DynamicResource Brush.DecoratorIconBG}"
-                                             IconForeground="{DynamicResource Brush.DecoratorIcon}"
-                                             BranchNameBackground="{DynamicResource Brush.DecoratorBranch}"
-                                             HeadBranchNameBackground="{DynamicResource Brush.DecoratorHead}"
-                                             TagNameBackground="{DynamicResource Brush.DecoratorTag}"
-                                             LabelForeground="{DynamicResource Brush.DecoratorFG}"
+                                             TagBackground="{DynamicResource Brush.DecoratorTag}"
+                                             Foreground="{DynamicResource Brush.FG1}"
                                              FontFamily="{DynamicResource Fonts.Primary}"
                                              FontSize="11"
-                                             VerticalAlignment="Center"
-                                             Refs="{Binding Decorators}"/>
+                                             VerticalAlignment="Center"/>
 
                       <v:CommitSubjectPresenter Grid.Column="2"
                                                 Classes="primary"
