ux: add `Background` property to avoid unclear display for selected state

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -138,6 +138,7 @@
                                                VerticalAlignment="Center"/>
 
                       <v:CommitRefsPresenter Grid.Column="1"
+                                             Background="{DynamicResource Brush.Contents}"
                                              TagBackground="{DynamicResource Brush.DecoratorTag}"
                                              Foreground="{DynamicResource Brush.FG1}"
                                              FontFamily="{DynamicResource Fonts.Primary}"
