--- a/src/Views/TagsView.axaml
+++ b/src/Views/TagsView.axaml
@@ -26,7 +26,8 @@
                   Margin="{Binding Depth, Converter={x:Static c:IntConverters.ToTreeMargin}}"
                   Background="Transparent"
                   ContextRequested="OnRowContextRequested"
-                  DoubleTapped="OnDoubleTappedNode">
+                  DoubleTapped="OnDoubleTappedNode"
+                  ToolTip.Tip="{Binding ToolTip}">
               <v:TagTreeNodeToggleButton Grid.Column="0"
                                          Classes="tree_expander"
                                          Focusable="False"
@@ -64,7 +65,10 @@
                SelectionChanged="OnRowSelectionChanged">
         <ListBox.ItemTemplate>
           <DataTemplate DataType="m:Tag">
-            <Grid ColumnDefinitions="Auto,*,Auto" Background="Transparent" ContextRequested="OnRowContextRequested">
+            <Grid ColumnDefinitions="Auto,*,Auto"
+                  Background="Transparent"
+                  ContextRequested="OnRowContextRequested"
+                  ToolTip.Tip="{Binding Message}">
               <Path Grid.Column="0" 
                     Width="10" Height="10"
                     Margin="8,0,0,0"
