--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -67,7 +67,7 @@
               </ListBox.ItemsPanel>
 
               <ListBoxItem>
-                <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto,Auto">
+                <Grid Classes="view_mode" ColumnDefinitions="32,*,Auto,Auto,Auto">
                   <Path Grid.Column="0" Width="12" Height="12" Data="{StaticResource Icons.Histories}"/>
                   <TextBlock Grid.Column="1" Classes="primary" Text="{DynamicResource Text.Histories}"/>
                   <ToggleButton Grid.Column="2"
@@ -76,6 +76,14 @@
                                 IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseTwoColumnsLayoutInHistories, Mode=TwoWay}"
                                 ToolTip.Tip="{DynamicResource Text.Histories.DisplayMode}"/>
                   <ToggleButton Grid.Column="3"
+                                Classes="line_path"
+                                Width="32" Height="26"
+                                Background="Transparent"
+                                IsChecked="{Binding EnableReflog, Mode=TwoWay}"
+                                ToolTip.Tip="{DynamicResource Text.Repository.EnableReflog}">
+                    <Path Width="12" Height="12" Data="{StaticResource Icons.Reference}"/>
+                  </ToggleButton>
+                  <ToggleButton Grid.Column="4"
                                 Classes="line_path"
                                 Width="32" Height="26"
                                 Background="Transparent"
