--- a/src/Views/ConventionalCommitMessageBuilder.axaml
+++ b/src/Views/ConventionalCommitMessageBuilder.axaml
@@ -26,7 +26,7 @@
 
       <Path Grid.Column="0"
             Width="14" Height="14"
-            Data="{StaticResource Icons.Code}"
+            Data="{StaticResource Icons.CommitMessageGenerator}"
             Margin="10,0,0,0"
             IsVisible="{OnPlatform True, macOS=False}"/>
 
