--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -216,29 +216,23 @@
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                   Background="{DynamicResource Brush.Window}"
                   BorderBrush="{DynamicResource Brush.Border0}"/>
+    
+    <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
+      <Grid IsVisible="{Binding DetailContext, Converter={x:Static ObjectConverters.IsNull}}">
+        <Path Width="128" Height="128"
+              Data="{StaticResource Icons.Detail}"
+              HorizontalAlignment="Center"
+              Fill="{DynamicResource Brush.FG2}"/>
 
-    <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
-      <ContentControl>
-        <ContentControl.Content>
-          <Binding Path="DetailContext">
-            <Binding.TargetNullValue>
-              <Grid>
-                <Path Width="128" Height="128"
-                      Data="{StaticResource Icons.Detail}"
-                      HorizontalAlignment="Center"
-                      Fill="{DynamicResource Brush.FG2}"/>
-
-                <StackPanel Margin="0,8" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
-                  <Path Width="12" Height="12" VerticalAlignment="Center" Data="{StaticResource Icons.Info}" Fill="{DynamicResource Brush.FG2}"/>
-                  <TextBlock Margin="4,0" Text="{DynamicResource Text.Histories.Tips.Prefix}" FontWeight="Bold" Foreground="{DynamicResource Brush.FG2}"/>
-                  <TextBlock Text="{DynamicResource Text.Histories.Tips}" Foreground="{DynamicResource Brush.FG2}" IsVisible="{OnPlatform True, macOS=False}"/>
-                  <TextBlock Text="{DynamicResource Text.Histories.Tips.MacOS}" Foreground="{DynamicResource Brush.FG2}" IsVisible="{OnPlatform False, macOS=True}"/>
-                </StackPanel>
-              </Grid>
-            </Binding.TargetNullValue>
-          </Binding>
-        </ContentControl.Content>
-        
+        <StackPanel Margin="0,8" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+          <Path Width="12" Height="12" VerticalAlignment="Center" Data="{StaticResource Icons.Info}" Fill="{DynamicResource Brush.FG2}"/>
+          <TextBlock Margin="4,0" Text="{DynamicResource Text.Histories.Tips.Prefix}" FontWeight="Bold" Foreground="{DynamicResource Brush.FG2}"/>
+          <TextBlock Text="{DynamicResource Text.Histories.Tips}" Foreground="{DynamicResource Brush.FG2}" IsVisible="{OnPlatform True, macOS=False}"/>
+          <TextBlock Text="{DynamicResource Text.Histories.Tips.MacOS}" Foreground="{DynamicResource Brush.FG2}" IsVisible="{OnPlatform False, macOS=True}"/>
+        </StackPanel>
+      </Grid>
+      
+      <ContentControl Content="{Binding DetailContext}">
         <ContentControl.DataTemplates>
           <DataTemplate DataType="vm:CommitDetail">
             <v:CommitDetail/>
@@ -264,6 +258,6 @@
           </DataTemplate>
         </ContentControl.DataTemplates>
       </ContentControl>
-    </Border>
+    </Grid>
   </v:LayoutableGrid>
 </UserControl>
