--- a/src/Views/Welcome.axaml
+++ b/src/Views/Welcome.axaml
@@ -131,10 +131,15 @@
                               IsChecked="{Binding IsExpanded}"
                               IsVisible="{Binding !IsRepository}"/>
 
-                <TextBlock Grid.Column="2" 
-                           Classes="primary" 
-                           VerticalAlignment="Center" 
-                           Text="{Binding Name}"/>
+                <StackPanel Grid.Column="2" Orientation="Horizontal">
+                  <TextBlock Classes="primary" VerticalAlignment="Center" Text="{Binding Name}"/>
+                  <Path Margin="2,0,0,0"
+                        Width="12" Height="12"
+                        Data="{StaticResource Icons.Error}"
+                        Fill="Orange"
+                        IsVisible="{Binding IsInvalid}"/>
+                </StackPanel>
+                
                 <TextBlock Grid.Column="3"
                            Classes="primary"
                            Margin="8,0"
