--- a/src/Views/ConventionalCommitMessageBuilder.axaml
+++ b/src/Views/ConventionalCommitMessageBuilder.axaml
@@ -16,7 +16,7 @@
                     SizeToContent="Height"
                     CanResize="False"
                     WindowStartupLocation="CenterOwner">
-  <Grid RowDefinitions="Auto,Auto,Auto" MinWidth="494">
+  <Grid RowDefinitions="Auto,Auto,Auto">
     <!-- TitleBar -->
     <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
